<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1.1">
    <ImageView 
    	android:layout_height="fill_parent" 
    	android:layout_weight="1" 
    	android:id="@+id/imageView1" 
    	android:layout_width="fill_parent" 
    	android:src="@drawable/icon2"
    	android:layout_margin="15sp">
    </ImageView>
    <TextView
        android:textSize="8pt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" android:text="@string/version"/>
  </LinearLayout>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1">
      <TextView
          android:textSize="8pt"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1" android:text="@string/program_use" 
          android:layout_gravity="center_vertical"
          android:layout_marginLeft="20sp"
          android:layout_marginRight="20sp" android:gravity="center|left"/>
  </LinearLayout>
        

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1">
      <TextView
          android:textSize="8pt"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_weight="1" android:text="@string/for_question" 
          android:layout_gravity="center_vertical"
          android:layout_marginLeft="45sp"
          android:layout_marginRight="10sp" android:gravity="center|left"/>
  </LinearLayout>

</LinearLayout>
