<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">



  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1.1"
      android:orientation="horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_weight="0.5"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/signature_verification"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="0.85"
      android:orientation="horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_weight="1"
        android:gravity="center|left"
        android:textSize="8pt" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1.1"
      android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1.5"
        android:orientation="vertical">

      <TextView
          android:id="@+id/Textchoose_an_id"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_below="@+id/Textaccueil"
          android:layout_alignLeft="@+id/Textaccueil"
          android:gravity="center_vertical|center_horizontal"
          android:text="@string/choose_an_id"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="vertical">

      <Spinner
          android:id="@+id/spinner_accueil"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/Textaccueil"
          android:layout_marginLeft="35dp"
          android:layout_marginTop="14dp"
          android:layout_marginRight="10sp"
          android:layout_toRightOf="@+id/Textchoose_an_id"
          android:prompt="@string/choose_an_id"></Spinner>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1.1"
      android:orientation="horizontal">

    <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_alignParentLeft="true"
      android:layout_alignParentBottom="true"
      android:layout_weight="1"
      android:orientation="vertical">

    <Button
        android:id="@+id/buttonsmall"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="New User"></Button>
  </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="vertical">

      <Button
          android:id="@+id/buttonVerify"
          android:layout_width="100sp"
          android:layout_height="50sp"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="Verify"></Button>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="vertical">

      <Button
          android:id="@+id/buttonentrop"
          android:layout_width="100sp"
          android:layout_height="50sp"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/entrop"></Button>
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1.1"
      android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="vertical">

      <Button
          android:id="@+id/buttondelete"
          android:layout_width="100sp"
          android:layout_height="50sp"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/delete"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="vertical">

      <Button
          android:id="@+id/buttonretrain"
          android:layout_width="100sp"
          android:layout_height="50sp"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/retrain"></Button>
    </LinearLayout>
  </LinearLayout>


  <LinearLayout
      android:id="@+id/linearLayout8"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_alignParentLeft="true"
      android:layout_alignParentBottom="true"
      android:layout_weight="1.18"
      android:orientation="horizontal">

    <Button
        android:id="@+id/buttonexport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"></Button>

    <Button
        android:id="@+id/buttonabout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"></Button>
  </LinearLayout>

</LinearLayout>
